# freestyle-hid

./: .gitignore  .mergify.yml  .pre-commit-config.yaml  .travis.yml  AUTHORS  README.md  mypy.ini  pyproject.toml  setup.cfg  setup.py
.github/workflows/: pypi.yml  pytest.yml
data/: known-commands.txt.license
freestyle_hid/: __init__.py  _exceptions.py  _freestyle_encryption.py  _hidwrapper.py  _session.py  models.py  py.typed
freestyle_hid/tests/: __init__.py  test_freestyle.py
freestyle_hid/tools/: encrypted_setup_extractor.py  extract_chatter.py  hid_console.py
