# SPDX-FileCopyrightText: 2013 The freestyle-hid Authors
#
# SPDX-License-Identifier: Apache-2.0

[metadata]
name = freestyle-hid
description = Python implementation of the HID protocol used by Abbott FreeStyle devices
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/glucometers-tech/freestyle-hid
author = Diego Elio Pettenò
author_email = flameeyes@flameeyes.com
license = Apache-2.0
license_files =
    AUTHORS
    LICENSE
    LICENSES/*
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Medical Science Apps.
keywords =
    glucometer
    diabetes
    freestyle
    abbott

[options]
packages = find:
install_requires =
    construct
python_requires = ~= 3.7

[options.extras_require]
hidapi =
    hidapi
tools =
    click
    click_log
    usbmon-tools ~= 3.0
dev =
    mypy
    pre-commit
    pytest-mypy
    pytest-timeout>=1.3.0
    pytest>=6.0
    setuptools_scm

[options.package_data]
* = py.typed

[options.entry_points]
console_scripts =
    freestyle-hid-console = freestyle_hid.tools.hid_console:main [tools]
    freestyle-encrypted-setup-extract = freestyle_hid.tools.encrypted_setup_extract:main [tools]
    freestyle-extract-chatter = freestyle_hid.tools.extract_chatter:main [tools]

[flake8]
max-line-length = 88
# Ignore long line errors, black takes care of them.
extend-ignore = E501
